# MEdit

./: CMakeLists.txt  README.md
src/: MBlockOps.cpp  MBlockOps.h  MBuffer.cpp  MBuffer.h  MClipBoard.cpp  MClipBoard.h  MColorPalette.cpp  MColorPalette.h  MDynamicArray.cpp  MDynamicArray.h  MDynamicString.cpp  MDynamicString.h  MEditBuffer.cpp  MEditBuffer.h  MEditBufferParser.cpp  MEditBufferParser.h  MEditUndoDataStack.cpp  MEditUndoDataStack.h  MEditUndoRedo.cpp  MEditUndoRedo.h  MEmptyLexer.cpp  MEmptyLexer.h  MILexer.cpp  MILexer.h  MLangWordLists.cpp  MLangWordLists.h  MMemory.cpp  MMemory.h  MPointerStack.cpp  MPointerStack.h  MString.cpp  MString.h  MStringList.cpp  MStringList.h  MUndoStack.cpp  MUndoStack.h  MWinEditor.cpp  MWinEditor.h  MWinGDI.cpp  MWinGDI.h  (+6 more)
